# scholarpress-backend

./: .gitignore  Cargo.toml  README.md  backend.png:Zone.Identifier
.github/workflows/: docker-publish.yml  test.yml
apps/publish-service/: Cargo.toml  Dockerfile
apps/publish-service/src/: config.rs  error.rs  lib.rs  main.rs
apps/publish-service/src/institutions/: mod.rs
apps/publish-service/src/routes/: check.rs  compile.rs  extract.rs  institutions.rs  mod.rs  spec.rs  template.rs  validate.rs
apps/publish-service/tests/: chunker_test.rs  docx_parser_test.rs  heading_detector_test.rs  parsed_document_test.rs  pdf_parser_test.rs  route_tests.rs
apps/scholarpress-cli/: Cargo.toml
apps/scholarpress-cli/src/: calibrate.rs  check.rs  main.rs
apps/scholarpress-cli/src/commands/: calibrate.rs  check.rs  mod.rs
apps/scholarpress-cli/tests/: cli_test.rs
crates/sp-check/: Cargo.toml
crates/sp-check/src/: calibration.rs  engine.rs  report.rs  spec.rs
crates/sp-extract/: Cargo.toml
crates/sp-extract/src/: chunker.rs  document.rs  docx.rs  heading.rs  lib.rs  pdf.rs
crates/sp-extract/tests/: chunker_test.rs  extract_pdf_test.rs  heading_test.rs
crates/sp-typst/: Cargo.toml
crates/sp-typst/src/: lib.rs  template.rs
crates/sp-typst/tests/: compile_test.rs
crates/sp-validate/: Cargo.toml
crates/sp-validate/src/: document.rs  engine.rs  extractor.rs  lib.rs
docs/superpowers/plans/: 2026-07-12-test-remediation-plan.md  2026-07-13-ci-workflow.md  2026-07-15-crate-separation-plan.md
docs/superpowers/specs/: 2026-07-12-test-remediation-design.md  (+1 more)
(+21 files in other folders)
