[package]
name = "publish-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-extract = { path = "../../crates/sp-extract" }
sp-validate = { path = "../../crates/sp-validate" }
sp-typst = { path = "../../crates/sp-typst" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
