[package]
name = "scholarpress-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-extract = { path = "../../crates/sp-extract" }
sp-validate = { path = "../../crates/sp-validate" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
